--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
+    <style>
+        .node {
+            stroke: #fff;
+            stroke-width: 1.5px;
+        }
+
+        .link {
+            stroke: #999;
+            stroke-opacity: .6;
+        }
+
+        .node text {
+            stroke: black
+        }
+    </style>
     <script src="../node_modules/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="../build/test.js"></script>
