--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,13 @@
         .node text {
             stroke: black
         }
+
+        circle {
+            fill: rgb(31, 119, 180);
+            fill-opacity: .25;
+            stroke: rgb(31, 119, 180);
+            stroke-width: 1px;
+        }
     </style>
     <script src="../node_modules/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
