--- a/test/index.html
+++ b/test/index.html
@@ -15,15 +15,13 @@
             stroke-opacity: .6;
         }
 
-        .node text {
-            stroke: black
+        g.node text {
+            stroke-width: 0;
         }
 
-        circle {
-            fill: rgb(31, 119, 180);
+        g.machine > circle {
             fill-opacity: .25;
-            stroke: rgb(31, 119, 180);
-            stroke-width: 1px;
+            stroke-width: 0;
         }
     </style>
     <script src="../node_modules/mocha/mocha.js"></script>
