--- a/src/test/index.html
+++ b/src/test/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
+    <link rel="stylesheet" href="../../node_modules/mocha/mocha.css" />
     <style>
         .node {
             stroke: #fff;
@@ -24,9 +24,9 @@
             stroke-width: 0;
         }
     </style>
-    <script src="../node_modules/mocha/mocha.js"></script>
+    <script src="../../node_modules/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
-    <script src="../build/test.js"></script>
+    <script src="../../dist/test.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             mocha.checkLeaks();
