proper UI refresh on diffs, first bits of AM based server

--- a/dev/json-diffs/index.html
+++ b/dev/json-diffs/index.html
@@ -83,13 +83,8 @@ document.addEventListener('DOMContentLoaded', function() {
         ui.render()
     })
     socket.on('diff-sync', function(diff) {
-        amv.jsondiffpatch.patch(ui.data, diff)
+        ui.patch(diff)
         console.log(diff)
-        ui.updateData()
-        ui.renderNodes()
-        ui.layout.start()
-        ui.redrawNodes()
-		ui.layout.on("tick", ui.redrawNodes.bind(ui));
     })
 })
 // socket.on('connect', function() {
