--- a/dev/json-diffs/joint.html
+++ b/dev/json-diffs/joint.html
@@ -6,67 +6,72 @@
     <!--<link rel="stylesheet" href="../../node_modules/jointjs/css/themes/default.css" />-->
     <link rel="stylesheet" href="joint.css" />
     <style>
-        svg {
-            border: 1px solid #ccc;
-        }
         body {
             font: 10px Monospace;
+            padding: 0;
+            margin: 0;
         }
         svg {
             width: 100%;
             height: 100%;
         }
-        text {
-            fill: #000000;
-            font-weight: 'normal';
+        #graph {
+            width: 100%;
+            height: 100%;
         }
-        circle {
-            fill: #f6f6f6;
-            stroke: #000000;
-            stroke-width: 2
+        .node {
+            fill: lightsteelblue;
+            stroke: #555;
+            stroke-width: 3px;
+            padding: 5px;
+            padding-right: 10px;
         }
-        .uml-state-body {
-            fill: rgba(48, 208, 198, 0.1);
-            stroke: rgba(48, 208, 198, 0.5);
-            stroke-width: 1.5;
+        .node.set {
+            fill: red;
         }
-        .uml-state-separator: {
-            stroke: rgba(48, 208, 198, 0.4)
+        circle.leaf {
+            stroke: #fff;
+            stroke-width: 1.5px;
         }
-        .is-set circle {
-            fill: thistle
+        circle.link-expanded {
+            stroke: #555;
+            stroke-width: 3px;
+            stroke-dasharray: 2px 4px;
+        }
+        circle.helper {
+            stroke-width: 0;
+            fill: #333;
+            opacity: 0.6;
+        }
+        circle.center-of-mass {
+            fill: white;
+            stroke: red;
+            stroke-width: 5px;
+        }
+        path.hull {
+            fill: lightsteelblue;
+            fill-opacity: 0.3;
+        }
+        path.hlink {
+            stroke: #333;
+            stroke-opacity: 0.5;
+            fill: none;
+            pointer-events: none;
+        }
+        line.link {
+            stroke: red;
+            stroke-opacity: 0.7;
+            pointer-events: none;
+        }
+        .group {
+            opacity: 0.5;
+        }
+        .node {
+            opacity: 0.8;
         }
     </style>
-    <script src="../../node_modules/socket.io-client/socket.io.js"></script>
-    <script src="../../dist/main.js"></script>
-    <script>
-var socket = io('http://localhost:3030/client');
-var ui;
-
-document.addEventListener('DOMContentLoaded', function() {
-    socket.once('loggers', function(ids) {
-        socket.emit('join', {
-            loggerId: ids[0]
-        })
-    })
-    socket.once('full-sync', function(data) {
-        console.log('full-sync', data)
-        ui = new amv.JointUi(data)
-        ui.render('#graph')
-    })
-    socket.on('diff-sync', function(diff) {
-        ui.patch(diff)
-        console.log(diff)
-    })
-})
-// socket.on('connect', function() {
-//     console.log('client:connected')
-// });
-// socket.on('test', function(data){
-//     console.log('test event', data)
-// });
-// socket.on('disconnect', function(){});
-    </script>
+    <script src="../../dist/ui.js"></script>
+    <script>amv_ui.default('#graph')</script>
 </head>
 <body>
     <div id="graph" />
