--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -118,6 +118,8 @@
             right: 30%;
             bottom: 0;
             left: 0;
+            padding-left: 2em;
+            padding-right: 2em;
         }
     </style>
     <script src="../../dist/ui.js"></script>
