UI with time traveling, logs

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -88,20 +88,9 @@
             right: 0;
         }
 
-        section {
-            background: white;
-        }
-
-        section#graph {
-            position: absolute;
-            bottom: 10%;
-            top: 0;
-            left: 0;
-            right: 30%;
-            overflow: auto;
-        }
-
         section#side-bar {
+            background: #272822;
+            color: white;
             position: absolute;
             top: 0;
             right: 0;
@@ -112,12 +101,23 @@
             border-style: solid;
         }
 
+        section#graph {
+            background: gray;
+            position: absolute;
+            bottom: 0;
+            padding-bottom: 10%;
+            top: 0;
+            left: 0;
+            right: 30%;
+            overflow: auto;
+        }
+
         section#bottom-bar {
             position: absolute;
-            top: 90%;
             right: 30%;
             bottom: 0;
             left: 0;
+            height: 7em;
             padding-left: 2em;
             padding-right: 2em;
         }
