Diff based repaints, graph colors, log colors

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -18,8 +18,8 @@
             padding: 5px;
             padding-right: 10px;
         }
-        .node.is-set {
-            fill: red;
+        .is-set circle {
+            fill: yellow;
         }
         circle.leaf {
             stroke: #fff;
@@ -115,9 +115,9 @@
         section#bottom-bar {
             position: absolute;
             right: 30%;
-            bottom: 0;
+            bottom: 2em;
             left: 0;
-            height: 7em;
+            height: 5em;
             padding-left: 2em;
             padding-right: 2em;
         }
