--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -62,6 +62,24 @@
             opacity: 0.8;
         }
 
+        path.connection {
+            stroke-width: 2;
+        }
+
+        .require path.connection {
+            stroke: #1976D2;
+        }
+
+        .drop path.connection,
+        .inverted path.connection {
+            stroke: #C62828;
+        }
+
+        .add path.connection,
+        .pipe path.connection {
+            stroke: forestgreen;
+        }
+
         .flex {
             display: -webkit-box;
             display: -moz-box;
