--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -232,9 +232,24 @@
             padding-left: 2em;
             padding-right: 2em;
         }
+
+        section#settings-bar {
+            position: absolute;
+            right: 31%;
+            bottom: 5em;
+            width: 11em;
+        }
+
+        #zoom {
+            height: 100px;
+            position: absolute;
+            right: 32%;
+            top: 0;
+        }
+
     </style>
-    <script src="../../dist/ui.js"></script>
-    <script>amv_ui.default()</script>
+    <script src="../../dist/inspector.umd.js"></script>
+    <script>inspector.default()</script>
 </head>
 <body>
     <div id="app"></div>
