UI bits faster webpack

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -247,6 +247,11 @@
             top: 0;
         }
 
+        #step-slider {
+            margin-left: 60px;
+            margin-top: -50px;
+        }
+
     </style>
     <script src="../../dist/inspector.umd.js"></script>
     <script>inspector.default()</script>
