--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -214,6 +214,10 @@
             border-width: 0 0 0 1px;
             border-color: gray;
             border-style: solid;
+            padding: 58px 5px 5px 5px;
+            overflow: auto;
+            white-space: nowrap;
+            font-family: monospace;
         }
 
         #graph-wrapper {
@@ -256,7 +260,7 @@
             right: 0;
             height: 5em;
             padding-left: 2em;
-            padding-right: 2em;
+            padding-right: 3em;
         }
 
         section#settings-bar {
@@ -277,6 +281,10 @@
             left: 48%;
             bottom: 7px;
             z-index: 1;
+        }
+
+        .sidebar-container > div {
+            height: 90% !important;
         }
 
     </style>
