--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -41,8 +41,11 @@
             stroke-width: 5px;
         }
         .uml-state-name {
-            font-size: 20px;
+            font-size: 28px;
             font-weight: bold;
+        }
+        .uml-state-separator {
+            display: none;
         }
         path.hull {
             fill: lightsteelblue;
@@ -273,7 +276,7 @@
 
         #step-slider {
             margin-left: 60px;
-            margin-top: -50px;
+            margin-top: -53px;
         }
 
         #step-counter {
