import / export snapshot

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -253,6 +253,17 @@
             z-index: 1;
         }
 
+        .toolbar input[type=file] {
+            cursor: pointer;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            width: 100%;
+            opacity: 0;
+        }
+
         section#bottom-bar.shrink-right {
             right: 31%;
         }
