multi & auto states layout

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -18,8 +18,14 @@
             padding: 5px;
             padding-right: 10px;
         }
+        .is-auto circle {
+            fill: lightgray;
+        }
         .is-set circle {
             fill: yellow;
+        }
+        .is-set.is-multi circle {
+            fill: orange;
         }
         circle.leaf {
             stroke: #fff;
@@ -293,7 +299,7 @@
         #step-counter {
             position: absolute !important;
             left: 48%;
-            bottom: 7px;
+            bottom: 9px;
             z-index: 1;
         }
 
