step type styles

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -25,7 +25,7 @@
             fill: yellow;
         }
         .is-set.is-multi circle {
-            fill: orange;
+            fill: #bbffb5;
         }
         circle.leaf {
             stroke: #fff;
@@ -122,43 +122,43 @@
 
         /* STEP REQUESTED */
 
-        .State.step-requested circle {
+        .joint-type-fsa-state.step-requested circle {
             stroke: red;
         }
 
-        .State.step-requested.step-pipe circle {
+        .joint-type-fsa-state.step-requested.step-pipe circle {
             stroke-dasharray: 120;
             stroke-dashoffset: 80;
         }
 
         /* STEP SET */
 
-        .State.step-set circle {
+        .joint-type-fsa-state.step-set circle {
             fill: #ffb40b;
         }
 
-        .State.step-set text {
+        .joint-type-fsa-state.step-set text {
             fill: black;
         }
 
         /* STEP DROP */
 
-        .State.step-drop circle {
+        .joint-type-fsa-state.step-drop circle {
             fill: brown;
         }
 
-        .State.step-drop text {
+        .joint-type-fsa-state.step-drop text {
             fill: white;
         }
 
         /* STEP CANCEL */
 
-        .State.step-cancel circle {
+        .joint-type-fsa-state.step-cancel circle {
             fill: red;
             stroke: black;
         }
 
-        .State.step-cancel text {
+        .joint-type-fsa-state.step-cancel text {
             fill: white;
         }
 
