commonjs & es6 build targets webworker is now optional stackblitz compatibility

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -7,6 +7,6 @@
     <script>inspector.default()</script>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="am-inspector"></div>
 </body>
 </html>
