stackblitz demo working locally

--- a/dev/stackblitz-demo/index.html
+++ b/dev/stackblitz-demo/index.html
@@ -3,7 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script type="module" src="./index.js"></script>
+    <script src="../../dist/am_inspector.umd.js"></script>
+    <script src="./am_demo.umd.js"></script>
 </head>
 <body>
     <div id="app"></div>
