string-based worker minified builds some reorganizations

--- a/src/inspector/index.html
+++ b/src/inspector/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="../../dist/inspector.umd.js"></script>
+    <script src="../../dist/am-inspector.umd.js"></script>
     <script>inspector.default()</script>
 </head>
 <body>
