remote-browser-logger example

--- a/examples/remote-browser-logger/index.html
+++ b/examples/remote-browser-logger/index.html
@@ -5,7 +5,5 @@
     <title></title>
     <script src="./am-demo.umd.js"></script>
 </head>
-<body>
-    <div id="app"></div>
-</body>
+<body></body>
 </html>
