move build to /build

--- a/examples/restaurant/index.html
+++ b/examples/restaurant/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="./am-demo.umd.js"></script>
+    <script src="./build/am-demo.umd.js"></script>
 </head>
 <body>
     <div id="app"></div>
